test/test25.bas
sub foo() as int32
    return 5.6789
end

sub main()
    let x = foo()
    print x
end
